--- a/package.json
+++ b/package.json
@@ -2,9 +2,21 @@
 	"name": "events-calendar",
 	"private": false,
 	"version": "1.1.5",
+	"description": "A React component for displaying events in a calendar view.",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/yourusername/events-calendar"
+	},
+	"license": "MIT",
+	"keywords": [
+		"calendar",
+		"events",
+		"react",
+		"component"
+	],
 	"type": "module",
 	"main": "dist/events-calendar.js",
-	"types": "dist/EventsCalendar.d.ts",
+	"types": "dist/index.d.ts",
 	"files": [
 		"dist/index.css",
 		"dist/index.d.ts",
