--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
+		"allowSyntheticDefaultImports": true,
 		"allowImportingTsExtensions": true,
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
