Work on examples

--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
 		"vite-plugin-dts": "^3.9.1",
 		"vite-plugin-lib-inject-css": "^2.1.1"
 	},
-	"packageManager": "yarn@4.3.1"
+	"packageManager": "yarn@4.3.1",
+	"dependencies": {
+		"@mantine/code-highlight": "^7.11.1"
+	}
 }
