--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
 			"~/*": ["./lib/*"]
 		}
 	},
-	"include": ["src", "lib"],
+	"include": ["src", "lib", "ess/FullCalendar.tsx", "ess/index.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
